<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/tv_login_label"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/custom_et"
        android:hint="@string/placeholder_username"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_username"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20sp"
        android:layout_below="@id/et_username"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/placeholder_password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/custom_et"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_password"
         />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_btn"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>